修改metadata，添加注释

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,13 +2,13 @@
 description-file = README.md
 
 [tool:pytest]
-pep8ignore = E501
+pep8ignore = E501 # 忽略的规则是每行代码的最大长度，通常情况下是 79 个字符
 
-[flake8]
-exclude =
+[flake8] # 代码静态检查工具
+exclude = # 不进行代码检查的目录
     .git,
     .tox,
     build,
     dist
 max-complexity = 10
-ignore = E501, W503, W504
+ignore = E501, W503, W504 # 忽略的规则是每行代码的最大长度
